<resources>
    <string name="app_name">StudyDay</string>

    <!-- Weekdays -->
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>

    <!-- Months -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="weeks">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <!-- DatePatters -->
    <string name="year_pattern">yyyy</string>
    <string name="date_pattern">MM/dd/yyyy</string>
    <string name="short_time_pattern">HH:mm</string>
    <string name="full_time_pattern">HH:mm:ss</string>

    <!-- Dialogs -->
    <string name="alert_dialog_month">Select the month:</string>
    <string name="alert_dialog_year">Select the year:</string>

    <!-- Words -->
    <string name="words_ok">OK</string>
    <string name="words_cancel">Cancel</string>
    <string name="words_subjects">Subjects</string>
    <string name="words_teacher">Teacher</string>
    <string name="words_name">Name</string>
    <string name="words_teacher_name">Teacher Name</string>
    <string name="words_add_subject">Add Subject</string>
    <string name="words_edit_subject">Edit Subject</string>
    <string name="words_invalid_field">Invalid field</string>
    <string name="words_successful">Successful</string>
    <string name="words_yes">Yes</string>
    <string name="words_no">No</string>
    <string name="words_subject_hardness">Subject hardness</string>
    <string name="words_teacher_hardness">Teacher hardness</string>
    <string name="words_subject_color">Subject color</string>
    <string name="words_add_naoescolar">Add Non-School Task</string>
    <string name="words_edit_naoescolar">Edit Non-School Task</string>
    <string name="words_title">Title</string>
    <string name="words_description">Description</string>
    <string name="words_start">Start</string>
    <string name="words_end">End</string>
    <string name="words_non_school">Non-School</string>
    <string name="words_class">Class</string>
    <string name="words_add_class">Add class</string>
    <string name="words_edit_class">Edit class</string>
    <string name="words_add_a_new_subject">Add a new subject</string>
    <string name="words_select_a_subject">Select a subject</string>
    <string name="words_weight">Weight</string>
    <string name="words_grade">Grade</string>
    <string name="words_exam">Exam</string>
    <string name="words_add_exam">Add exam</string>
    <string name="words_edit_exam">Edit exam</string>
    <string name="words_enter_with_a_value_between_0_and_100">Enter with a value between 0 and 100</string>
    <string name="words_optional">Optional</string>
    <string name="words_time">Time</string>
    <string name="words_date">Date</string>
    <string name="words_select_a_time">Select a time:</string>
    <string name="words_select_a_date">Select a date:</string>
    <string name="words_select_a_date_time">Select a date and time:</string>
    <string name="words_select_a">Select a:</string>
    <string name="words_estudo">Generate Study</string>

    <!-- Subject -->
    <string name="show_subject">Show Subject</string>

    <!-- Non-School -->
    <string name="show_naoescolar">Show Non-School Task</string>
    <string name="show_naoescolar_timeerror">It\'s occupated. Choose another time</string>
</resources>
